[package]
name = "ssb-packetstream"
version = "0.2.0"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "Secure Scuttlebutt packet stream protocol"
repository = "https://github.com/sunrise-choir/ssb-packetstream"
documentation = "https://docs.rs/ssb-packetstream/"
readme = "README.md"
keywords = ["packet-stream", "muxrpc", "ssb", "scuttlebutt"]

[dependencies]
async-trait = "0.1.22"
byteorder = "1.3.2"
futures = "0.3.1"
snafu = { version = "0.6.2", features = ["futures"] }

[dev-dependencies]
async-ringbuffer = { version = "~0.5.2", git = "https://github.com/leo-lb/async-ringbuffer" }
